--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,186 @@
-body {
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  line-height: 1.5;
+  font-size: 0.875rem;
 }
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 0.875rem;
+}
+
+p {
+  margin-bottom: 1.25rem;
+  color: hsl(210, 22%, 49%);
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  h3 {
+    font-size: 1.75rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+  }
+
+  body {
+    font-size: 1rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
+}
+
+
+nav {
+  background: #fff;
+  box-shadow: 0 5px 15px rgba;
+}
+
+.nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+
+
+.logo {
+  height: 40px;
+}
+
+.links button {
+  background-color: transparent;
+  border: none;
+  color: hsl(209, 34%, 30%);
+  font-size: 1rem;
+  border-radius: 5px;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  transition: all 0.3s linear;
+}
+
+.links button:hover {
+  background: #FCF55F;
+  color: #FFFACD;
+  padding-left: 1.5rem;
+}
+
+.social-icons {
+  display: none;
+}
+
+.btn-container {
+  height: 0;
+  overflow: hidden;
+  transition: all 0.3s linear;
+  ;
+}
+
+
+.links-btn {
+  color: #002D62;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
+}
+
+.nav-header {
+  padding: 0;
+}
+
+
+.links-container {
+  height: auto !important;
+}
+
+.links {
+  display: flex;
+}
+
+.links button {
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+}
+
+.links a:hover {
+  padding: 0;
+  background: transparent;
+}
+
+.container {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 48px;
+  font-weight: bold;
+  padding-bottom: 200px;
+  padding-top: 200px;
+  color: #002D62;
+  background-color: antiquewhite;
+  border: 2px solid black;
+}
+
+
